fix z-index

--- a/app/styles/knihy-roka.scss
+++ b/app/styles/knihy-roka.scss
@@ -194,6 +194,7 @@
   right: 50px;
   bottom: 50px;
   background-color: _color(primary);
+  z-index: 1000;
 
   &:hover,
   &:focus {
